# GlyLES

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTE.md  CONTRINUTE.md  LICENSE  README.md  conftest.py  filtering.py  galaxy_xml_file  meta.yaml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml  test.yaml
docs/: conf.py  index.rst  requirements.txt
docs/howto/: conversion.nblink  converting.rst  fgs.nblink  filtering.nblink  filtering.rst  visualization.nblink  visualization.rst
docs/notes/: installation.rst  notation.rst
docs/source/: conf.py  convert.rst  converting.rst  glycan.rst  index.rst
docs_new/source/: index.rst
docs_old/: README.rst
examples/: conversion.ipynb  fgs.ipynb  filtering.ipynb  visualization.ipynb
examples/files/: general.txt  pubchem_poly.tsv
glyles/: __init__.py  __main__.py  command_line_caller.py  converter.py  glyles
glyles/glycans/: enum_c.py  factory.py  factory_f.py  factory_p.py  glycans.py  monomer.py  nx_monomer.py  rdkit_monomer.py  rdkit_reactor.py  reactor.py  smiles_reactor.py  utils.py
glyles/glycans/factory/: factory.py  factory_d.py  factory_f.py  factory_o.py  factory_p.py
glyles/glycans/mono/: enum_c.py  monomer.py  (+2 more)
glyles/grammar/: Glycan.g4  Glycan.interp  Glycan.tokens  GlycanLexer.interp  GlycanLexer.py  GlycanLexer.tokens  GlycanListener.py  GlycanParser.py  README.md  parse.py
glyles/gwb/: GWB.g4  GWB.interp  GWB.tokens  GWBLexer.interp  GWBLexer.py  GWBListener.py  GWBParser.py
glyles/gws/: GWS.g4  GWS.interp  GWSLexer.interp  GWSLexer.py  GWSListener.py  GWSParser.py
glyles/iupac/: IUPAC.g4  IUPAC.interp  IUPAC.tokens  IUPACLexer.interp  IUPACLexer.py  IUPACListener.py  IUPACParser.py
glyles/smiles/: smiles.py
glyles/test/: simple_test.py
glyles/utils/: merge.py
tests/: conftest.py  extensions.txt  generate.py  new_extension.txt  new_monomers.txt  new_size_extension.txt  not_parsed.txt  test_cli.py  test_convert.py  test_counting.py  test_derivatives.py  test_gwb.py  test_isomorphism.py  test_negative.py  test_parser.py  test_smiles.py  test_smiles_mono.py  test_utils.py  tests.tsv  utils.py
tests/data/: anhydro.tsv  carbons.tsv  general.tsv  generate_glycowork_tests.py  glycam.tsv  glycowork.txt  glycowork_mono.txt  glycowork_poly.txt  gwb_iupac.tsv  gws_crawler.py  lo_glycans.txt  openforms.tsv  oracle.txt  profiling.tsv  pubchem_mono.tsv  pubchem_mono_2.tsv  pubchem_poly.tsv  pubchem_poly_2.tsv  runtime.tsv  test_cli1.txt  test_cli2.txt  test_cli3.txt  test_cli_solution.txt  tests.tsv
(+12 files in other folders)
