[tool.poetry]
name = "glyles"
version = "1.2.0"
repository = "https://github.com/kalininalab/GlyLES"
readme = "README.md"
description = "A tool to convert IUPAC representation of glycans into SMILES strings"
authors = ["Roman Joeres <roman.joeres@helmholtz-hips.de>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "*"
rdkit = ">=2021.9.2"
antlr4-tools = ">=0.2.1"
networkx = ">=2.6.3"
pydot = "^1.4.2"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
notebook = "^6.4.12"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "==0.8.9"
nbsphinx-link = "==1.3.0"

[tool.poetry.scripts]
glyles = "glyles.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
